ffigen/LabSoundHelper.h

// completely disconnect the node from the graph
void AudioContext_disconnectCompletely(AudioContext* context, int node, int destIdx);
// connect a parameter to receive the indexed output of a node
void AudioContext_connectParam(AudioContext* context, int paramNodeId, int paramId, int driverNodeId, int index);
// connect destinationNode's named parameter input to driver's indexed output
void AudioContext_connectParamByName(AudioContext* context, int destinationNodeId, char const*const parameterName, int driverNodeId, int index);
// disconnect a parameter from the indexed output of a node
void AudioContext_disconnectParam(AudioContext* context, int paramNodeId, int paramId, int driverNodeId, int index);
void AudioContext_releaseContext(AudioContext* ctx);
//////////////////
/// AudioParam ///
//////////////////

float AudioParam_value(int nodeId, int paramIndex);
void AudioParam_setValue(int nodeId, int paramIndex, float value);
float AudioParam_finalValue(int nodeId, int paramIndex, AudioContext* context);
void AudioParam_setValueCurveAtTime(int nodeId, int paramIndex, float curve[],float time,float duration);
void AudioParam_cancelScheduledValues(int nodeId, int paramIndex, float startTime);
void AudioParam_setValueAtTime(int nodeId, int paramIndex,float value,float time);
void AudioParam_exponentialRampToValueAtTime(int nodeId, int paramIndex,float value,float time);
void AudioParam_linearRampToValueAtTime(int nodeId, int paramIndex, float value,float time);
void AudioParam_setTargetAtTime(int nodeId, int paramIndex, float target, float time, float timeConstant);
float AudioParam_minValue(int nodeId, int paramIndex);
float AudioParam_maxValue(int nodeId, int paramIndex);
float AudioParam_defaultValue(int nodeId, int paramIndex);
void AudioParam_resetSmoothedValue(int nodeId, int paramIndex);
void AudioParam_setSmoothingConstant(int nodeId, int paramIndex, double k);
int AudioParam_hasSampleAccurateValues(int nodeId, int paramIndex);
/////////////////
/// AudioNode ///
/////////////////

void AudioNode_initialize(int nodeId);
void AudioNode_uninitialize(int nodeId);
int AudioNode_isScheduledNode(int nodeId);