lib/src/generated_bindings.dart


  late final _AudioContext_disconnectCompletely_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_disconnectCompletely>>(
          'AudioContext_disconnectCompletely');
  late final _dart_AudioContext_disconnectCompletely
      _AudioContext_disconnectCompletely =
      _AudioContext_disconnectCompletely_ptr.asFunction<
          _dart_AudioContext_disconnectCompletely>();

  void AudioContext_connectParam(
    ffi.Pointer<ffi.Void> context,
    int paramNodeId,
    int paramId,
    int driverNodeId,
    int index,
  ) {
    return _AudioContext_connectParam(
      context,
      paramNodeId,
      paramId,
      driverNodeId,
      index,
    );
  }

  late final _AudioContext_connectParam_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_connectParam>>(
          'AudioContext_connectParam');
  late final _dart_AudioContext_connectParam _AudioContext_connectParam =
      _AudioContext_connectParam_ptr.asFunction<
          _dart_AudioContext_connectParam>();

  void AudioContext_connectParamByName(
    ffi.Pointer<ffi.Void> context,
    int destinationNodeId,
    ffi.Pointer<ffi.Int8> parameterName,
    int driverNodeId,
    int index,
  ) {
    return _AudioContext_connectParamByName(
      context,
      destinationNodeId,
      parameterName,
      driverNodeId,
      index,
    );
  }

  late final _AudioContext_connectParamByName_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_connectParamByName>>(
          'AudioContext_connectParamByName');
  late final _dart_AudioContext_connectParamByName
      _AudioContext_connectParamByName = _AudioContext_connectParamByName_ptr
          .asFunction<_dart_AudioContext_connectParamByName>();

  void AudioContext_disconnectParam(
    ffi.Pointer<ffi.Void> context,
    int paramNodeId,
    int paramId,
    int driverNodeId,
    int index,
  ) {
    return _AudioContext_disconnectParam(
      context,
      paramNodeId,
      paramId,
      driverNodeId,
      index,
    );
  }

  late final _AudioContext_disconnectParam_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_disconnectParam>>(
          'AudioContext_disconnectParam');
  late final _dart_AudioContext_disconnectParam _AudioContext_disconnectParam =
      _AudioContext_disconnectParam_ptr.asFunction<
          _dart_AudioContext_disconnectParam>();

  void AudioContext_releaseContext(
    ffi.Pointer<ffi.Void> ctx,
  ) {
    return _AudioContext_releaseContext(
      ctx,
    );
  }

  late final _AudioContext_releaseContext_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_releaseContext>>(
          'AudioContext_releaseContext');
  late final _dart_AudioContext_releaseContext _AudioContext_releaseContext =
      _AudioContext_releaseContext_ptr.asFunction<
          _dart_AudioContext_releaseContext>();

  /// ///////////////
  /// AudioParam ///
  /// ///////////////
  double AudioParam_value(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_value(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_value_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_value>>('AudioParam_value');
  late final _dart_AudioParam_value _AudioParam_value =
      _AudioParam_value_ptr.asFunction<_dart_AudioParam_value>();

  void AudioParam_setValue(
    int nodeId,
    int paramIndex,
    double value,
  ) {
    return _AudioParam_setValue(
      nodeId,
      paramIndex,
      value,
    );
  }

  late final _AudioParam_setValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setValue>>(
          'AudioParam_setValue');
  late final _dart_AudioParam_setValue _AudioParam_setValue =
      _AudioParam_setValue_ptr.asFunction<_dart_AudioParam_setValue>();

  double AudioParam_finalValue(
    int nodeId,
    int paramIndex,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioParam_finalValue(
      nodeId,
      paramIndex,
      context,
    );
  }

  late final _AudioParam_finalValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_finalValue>>(
          'AudioParam_finalValue');
  late final _dart_AudioParam_finalValue _AudioParam_finalValue =
      _AudioParam_finalValue_ptr.asFunction<_dart_AudioParam_finalValue>();

  void AudioParam_setValueCurveAtTime(
    int nodeId,
    int paramIndex,
    ffi.Pointer<ffi.Float> curve,
    double time,
    double duration,
  ) {
    return _AudioParam_setValueCurveAtTime(
      nodeId,
      paramIndex,
      curve,
      time,
      duration,
    );
  }

  late final _AudioParam_setValueCurveAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setValueCurveAtTime>>(
          'AudioParam_setValueCurveAtTime');
  late final _dart_AudioParam_setValueCurveAtTime
      _AudioParam_setValueCurveAtTime = _AudioParam_setValueCurveAtTime_ptr
          .asFunction<_dart_AudioParam_setValueCurveAtTime>();

  void AudioParam_cancelScheduledValues(
    int nodeId,
    int paramIndex,
    double startTime,
  ) {
    return _AudioParam_cancelScheduledValues(
      nodeId,
      paramIndex,
      startTime,
    );
  }

  late final _AudioParam_cancelScheduledValues_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_cancelScheduledValues>>(
          'AudioParam_cancelScheduledValues');
  late final _dart_AudioParam_cancelScheduledValues
      _AudioParam_cancelScheduledValues = _AudioParam_cancelScheduledValues_ptr
          .asFunction<_dart_AudioParam_cancelScheduledValues>();

  void AudioParam_setValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_setValueAtTime(
      nodeId,
      paramIndex,
      value,
      time,
    );
  }

  late final _AudioParam_setValueAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setValueAtTime>>(
          'AudioParam_setValueAtTime');
  late final _dart_AudioParam_setValueAtTime _AudioParam_setValueAtTime =
      _AudioParam_setValueAtTime_ptr.asFunction<
          _dart_AudioParam_setValueAtTime>();

  void AudioParam_exponentialRampToValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_exponentialRampToValueAtTime(
      nodeId,
      paramIndex,
      value,
      time,
    );
  }

  late final _AudioParam_exponentialRampToValueAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_exponentialRampToValueAtTime>>(
          'AudioParam_exponentialRampToValueAtTime');
  late final _dart_AudioParam_exponentialRampToValueAtTime
      _AudioParam_exponentialRampToValueAtTime =
      _AudioParam_exponentialRampToValueAtTime_ptr.asFunction<
          _dart_AudioParam_exponentialRampToValueAtTime>();

  void AudioParam_linearRampToValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_linearRampToValueAtTime(
      nodeId,
      paramIndex,
      value,
      time,
    );
  }

  late final _AudioParam_linearRampToValueAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_linearRampToValueAtTime>>(
          'AudioParam_linearRampToValueAtTime');
  late final _dart_AudioParam_linearRampToValueAtTime
      _AudioParam_linearRampToValueAtTime =
      _AudioParam_linearRampToValueAtTime_ptr.asFunction<
          _dart_AudioParam_linearRampToValueAtTime>();

  void AudioParam_setTargetAtTime(
    int nodeId,
    int paramIndex,
    double target,
    double time,
    double timeConstant,
  ) {
    return _AudioParam_setTargetAtTime(
      nodeId,
      paramIndex,
      target,
      time,
      timeConstant,
    );
  }

  late final _AudioParam_setTargetAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setTargetAtTime>>(
          'AudioParam_setTargetAtTime');
  late final _dart_AudioParam_setTargetAtTime _AudioParam_setTargetAtTime =
      _AudioParam_setTargetAtTime_ptr.asFunction<
          _dart_AudioParam_setTargetAtTime>();

  double AudioParam_minValue(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_minValue(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_minValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_minValue>>(
          'AudioParam_minValue');
  late final _dart_AudioParam_minValue _AudioParam_minValue =
      _AudioParam_minValue_ptr.asFunction<_dart_AudioParam_minValue>();

  double AudioParam_maxValue(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_maxValue(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_maxValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_maxValue>>(
          'AudioParam_maxValue');
  late final _dart_AudioParam_maxValue _AudioParam_maxValue =
      _AudioParam_maxValue_ptr.asFunction<_dart_AudioParam_maxValue>();

  double AudioParam_defaultValue(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_defaultValue(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_defaultValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_defaultValue>>(
          'AudioParam_defaultValue');
  late final _dart_AudioParam_defaultValue _AudioParam_defaultValue =
      _AudioParam_defaultValue_ptr.asFunction<_dart_AudioParam_defaultValue>();

  void AudioParam_resetSmoothedValue(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_resetSmoothedValue(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_resetSmoothedValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_resetSmoothedValue>>(
          'AudioParam_resetSmoothedValue');
  late final _dart_AudioParam_resetSmoothedValue
      _AudioParam_resetSmoothedValue = _AudioParam_resetSmoothedValue_ptr
          .asFunction<_dart_AudioParam_resetSmoothedValue>();

  void AudioParam_setSmoothingConstant(
    int nodeId,
    int paramIndex,
    double k,
  ) {
    return _AudioParam_setSmoothingConstant(
      nodeId,
      paramIndex,
      k,
    );
  }

  late final _AudioParam_setSmoothingConstant_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setSmoothingConstant>>(
          'AudioParam_setSmoothingConstant');
  late final _dart_AudioParam_setSmoothingConstant
      _AudioParam_setSmoothingConstant = _AudioParam_setSmoothingConstant_ptr
          .asFunction<_dart_AudioParam_setSmoothingConstant>();

  int AudioParam_hasSampleAccurateValues(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_hasSampleAccurateValues(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_hasSampleAccurateValues_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_hasSampleAccurateValues>>(
          'AudioParam_hasSampleAccurateValues');
  late final _dart_AudioParam_hasSampleAccurateValues
      _AudioParam_hasSampleAccurateValues =
      _AudioParam_hasSampleAccurateValues_ptr.asFunction<
          _dart_AudioParam_hasSampleAccurateValues>();

  /// //////////////
  /// AudioNode ///
  /// //////////////
  void AudioNode_initialize(
    int nodeId,
  ) {
    return _AudioNode_initialize(
      nodeId,
    );
  }

  late final _AudioNode_initialize_ptr =
      _lookup<ffi.NativeFunction<_c_AudioNode_initialize>>(
          'AudioNode_initialize');
  late final _dart_AudioNode_initialize _AudioNode_initialize =
      _AudioNode_initialize_ptr.asFunction<_dart_AudioNode_initialize>();

  void AudioNode_uninitialize(
    int nodeId,
  ) {
    return _AudioNode_uninitialize(
      nodeId,
    );
  }

  late final _AudioNode_uninitialize_ptr =
      _lookup<ffi.NativeFunction<_c_AudioNode_uninitialize>>(
          'AudioNode_uninitialize');
  late final _dart_AudioNode_uninitialize _AudioNode_uninitialize =
      _AudioNode_uninitialize_ptr.asFunction<_dart_AudioNode_uninitialize>();

  int AudioNode_isScheduledNode(
    int nodeId,
  ) {
    return _AudioNode_isScheduledNode(
      nodeId,
    );
  }
